--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.CreatePasswordActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/layoutNewPassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
-        android:paddingRight="@dimen/_21sdp">
+        android:paddingRight="@dimen/_21sdp"
+        android:orientation="vertical"
+        >
 
         <RelativeLayout
             android:id="@+id/layoutClose"
@@ -66,31 +69,128 @@
             android:textSize="@dimen/_12ssp"
             android:visibility="gone" />
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/tvMessageChangePass"
-            android:layout_marginTop="@dimen/_15sdp"
             android:fillViewport="true"
             android:fitsSystemWindows="true"
-            android:scrollbars="none">
+            >
 
-            <RelativeLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:scrollbars="none">
 
-                <RelativeLayout
-                    android:id="@+id/layoutPwd"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_50sdp">
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:id="@+id/layoutPwd"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_50sdp">
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/etlPassword"
+                            style="@style/TextInputLayout.OutlinedBox"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/new_password"
+                            android:textColorHint="@color/primary_black"
+                            app:boxStrokeColor="@color/primary_green"
+                            app:endIconDrawable="@drawable/ic_eyeclose"
+                            app:endIconMode="custom"
+                            app:endIconTint="@color/xdark_gray"
+                            app:errorIconDrawable="@null"
+                            app:expandedHintEnabled="false"
+                            app:hintTextColor="@color/primary_green">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/etPassword"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:hint="8-12 Characters"
+                                android:imeOptions="actionNext"
+                                android:inputType="textPassword"
+                                android:maxLength="12"
+                                android:maxLines="1"
+                                android:padding="@dimen/_14sdp"
+                                android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                                android:singleLine="true"
+                                android:textColor="@color/text_color"
+                                android:textColorHint="@color/light_gray"
+                                android:textCursorDrawable="@drawable/cursor_color"
+                                android:textSize="@dimen/_12ssp" />
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layoutIndicator"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:paddingBottom="@dimen/_5sdp"
+                            android:visibility="visible">
+
+                            <View
+                                android:id="@+id/strengthOne"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_2sdp"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginEnd="10dp"
+                                android:layout_weight="1"
+                                android:background="@color/error_red" />
+
+                            <View
+                                android:id="@+id/strengthTwo"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_2sdp"
+                                android:layout_marginEnd="10dp"
+                                android:layout_weight="1"
+                                android:background="@color/error_red"
+                                android:visibility="invisible" />
+
+                            <View
+                                android:id="@+id/strengthThree"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_2sdp"
+                                android:layout_marginEnd="10dp"
+                                android:layout_weight="1"
+                                android:background="@color/error_red"
+                                android:visibility="invisible" />
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/tvPasswordInfo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/layoutPwd"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Must be 8-12 characters, 1 uppercase, 1 number, 1 lower case, 1 special character."
+                        android:textColor="@color/error"
+                        android:textSize="@dimen/_10sdp" />
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/etlPassword"
-                        style="@style/TextInputLayout.OutlinedBox"
+                        android:id="@+id/etlCPassword"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/new_password"
+                        android:layout_below="@+id/tvPasswordInfo"
+                        android:layout_marginTop="@dimen/_20sdp"
+                        android:hint="Confirm Password"
                         android:textColorHint="@color/primary_black"
+                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
                         app:boxStrokeColor="@color/primary_green"
                         app:endIconDrawable="@drawable/ic_eyeclose"
                         app:endIconMode="custom"
@@ -100,135 +200,48 @@
                         app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/etPassword"
+                            android:id="@+id/etCPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="8-12 Characters"
-                            android:imeOptions="actionNext"
+                            android:hint="@string/confirm_password"
+                            android:imeOptions="actionDone"
                             android:inputType="textPassword"
                             android:maxLength="12"
-                            android:padding="@dimen/_14sdp"
+                            android:maxLines="1"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                            android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
-                            android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp"
-                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <LinearLayout
-                        android:id="@+id/layoutIndicator"
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cvSave"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:paddingBottom="@dimen/_5sdp"
-                        android:visibility="visible">
+                        android:layout_height="@dimen/_45sdp"
+                        android:layout_marginTop="@dimen/_250sdp"
+                        android:layout_marginBottom="@dimen/_27sdp"
+                        app:cardBackgroundColor="@color/inactive_color"
+                        app:cardCornerRadius="@dimen/_22sdp">
 
-                        <View
-                            android:id="@+id/strengthOne"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_2sdp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="10dp"
-                            android:layout_weight="1"
-                            android:background="@color/error_red" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/opensans_bold"
+                            android:text="Save"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_12ssp" />
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+            </ScrollView>
 
-                        <View
-                            android:id="@+id/strengthTwo"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_2sdp"
-                            android:layout_marginEnd="10dp"
-                            android:layout_weight="1"
-                            android:background="@color/error_red"
-                            android:visibility="invisible" />
+        </RelativeLayout>
 
-                        <View
-                            android:id="@+id/strengthThree"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_2sdp"
-                            android:layout_marginEnd="10dp"
-                            android:layout_weight="1"
-                            android:background="@color/error_red"
-                            android:visibility="invisible" />
-                    </LinearLayout>
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/tvPasswordInfo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/layoutPwd"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="Must be 8-12 characters, 1 uppercase, 1 number, 1 lower case, 1 special character."
-                    android:textColor="@color/error"
-                    android:textSize="@dimen/_10sdp" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/etlCPassword"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvPasswordInfo"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:hint="Confirm Password"
-                    android:textColorHint="@color/primary_black"
-                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
-                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
-                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
-                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
-                    app:boxStrokeColor="@color/primary_green"
-                    app:endIconDrawable="@drawable/ic_eyeclose"
-                    app:endIconMode="custom"
-                    app:endIconTint="@color/xdark_gray"
-                    app:errorIconDrawable="@null"
-                    app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etCPassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:hint="@string/confirm_password"
-                        android:imeOptions="actionDone"
-                        android:inputType="textPassword"
-                        android:maxLength="12"
-                        android:textColorHint="@color/light_gray"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                        android:textColor="@color/text_color"
-                        android:textSize="@dimen/_12ssp"
-                        />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cvSave"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_45sdp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:layout_marginBottom="@dimen/_27sdp"
-                    app:cardBackgroundColor="@color/inactive_color"
-                    app:cardCornerRadius="@dimen/_22sdp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="Save"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_12ssp" />
-                </androidx.cardview.widget.CardView>
-            </RelativeLayout>
-        </ScrollView>
-
-    </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/layoutDone"
@@ -287,4 +300,4 @@
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
