--- a/app/src/main/res/layout/activity_bank_america_order_review.xml
+++ b/app/src/main/res/layout/activity_bank_america_order_review.xml
@@ -160,34 +160,31 @@
 
 
     <androidx.constraintlayout.motion.widget.MotionLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_48sdp"
         android:id="@+id/lay_lock_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:background="@drawable/shape_round_rectable"
         android:elevation="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layoutDescription="@xml/activity_swipe_unloack_scene"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/shape_round_rectable"
-        app:layoutDescription="@xml/activity_swipe_unloack_scene"
-        android:layout_marginBottom="@dimen/_23sdp"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/tv_lable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:ellipsize="end"
             android:gravity="center"
             android:paddingEnd="16dp"
             android:paddingRight="16dp"
             android:text="Slide to Confirm"
             android:textColor="@color/white"
-            android:textSize="@dimen/_12sdp"
-            android:fontFamily="@font/opensans_bold"
+            android:textSize="@dimen/_15sdp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/im_lock"
             app:layout_constraintStart_toEndOf="@+id/im_lock"
             app:layout_constraintTop_toTopOf="@+id/im_lock" />
@@ -198,20 +195,21 @@
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             app:cardBackgroundColor="@color/primary_color"
             app:cardCornerRadius="@dimen/_30sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="16dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_double_left"
+
                 />
 
         </androidx.cardview.widget.CardView>
@@ -221,26 +219,23 @@
             android:id="@+id/im_lock_"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:visibility="invisible"
             app:cardCornerRadius="@dimen/_20sdp"
-            android:visibility="invisible">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ProgressBar
-                android:layout_gravity="center"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:background="@color/primary_color"
-                />
+                android:layout_gravity="center"
+                android:background="@color/primary_color" />
 
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.motion.widget.MotionLayout>
-
-
 
 </LinearLayout>
