--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -88,9 +88,10 @@
 
                         <ImageView
                             android:id="@+id/userProfileIV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"/>
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:visibility="visible"
+                            android:scaleType="fitXY" />
                         <TextView
                             android:visibility="gone"
                             android:id="@+id/imageTextTV"
