--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -7,10 +7,10 @@
     android:orientation="vertical"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
     tools:context=".view.PayRequestScanActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <com.budiyev.android.codescanner.CodeScannerView
             android:id="@+id/scanner_view"
@@ -29,73 +29,75 @@
             app:frameSize="0.65"
             app:frameThickness="5dp"
             app:maskColor="#2CFDFBFB" />
+
         <ImageView
             android:id="@+id/closeBtnSC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_closewhite"
-            android:visibility="visible"
-            android:layout_marginTop="@dimen/_45sdp"
             android:layout_marginStart="@dimen/_21sdp"
-            />
+            android:layout_marginTop="@dimen/_45sdp"
+            android:src="@drawable/ic_closewhite"
+            android:visibility="visible" />
+
         <LinearLayout
             android:id="@+id/layoutHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone"
             android:background="@drawable/bottomradius"
+            android:orientation="vertical"
             android:paddingLeft="@dimen/_21sdp"
-            android:paddingBottom="@dimen/_25sdp">
+            android:paddingBottom="@dimen/_25sdp"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/imgCloseSM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_45sdp"
-                android:src="@drawable/ic_close"/>
+                android:src="@drawable/ic_close" />
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/viewSideBarCV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/_19sdp"
-            android:layout_marginTop="@dimen/_90sdp"
             android:layout_marginStart="@dimen/_21sdp"
-            android:layout_marginEnd="@dimen/_21sdp">
+            android:layout_marginTop="@dimen/_90sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            app:cardCornerRadius="@dimen/_19sdp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/_2sdp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="@dimen/_2sdp">
+
                 <TextView
                     android:id="@+id/scanCodeTV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Scan Code"
                     android:layout_weight="1"
+                    android:background="@drawable/bg_core_colorfill"
+                    android:fontFamily="@font/opensans_bold"
                     android:paddingTop="@dimen/_11sdp"
                     android:paddingBottom="@dimen/_11sdp"
+                    android:text="Scan Code"
                     android:textAlignment="center"
-                    android:fontFamily="@font/opensans_bold"
                     android:textColor="@color/white"
-                    android:background="@drawable/bg_core_colorfill"
-                    android:textSize="@dimen/_11ssp"
-                    />
+                    android:textSize="@dimen/_11ssp" />
+
                 <TextView
                     android:id="@+id/scanMeTV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Scan Me"
-                    android:textAlignment="center"
                     android:layout_weight="1"
+                    android:fontFamily="@font/opensans_bold"
                     android:paddingTop="@dimen/_11sdp"
                     android:paddingBottom="@dimen/_11sdp"
-                    android:fontFamily="@font/opensans_bold"
+                    android:text="Scan Me"
+                    android:textAlignment="center"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp"
-                    />
+                    android:textSize="@dimen/_11ssp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -106,31 +108,33 @@
             android:layout_marginTop="@dimen/_450sdp"
             android:visibility="visible">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
                 <ImageView
                     android:id="@+id/toglebtn"
-                    android:layout_alignParentLeft="true"
                     android:layout_width="@dimen/_38sdp"
                     android:layout_height="@dimen/_38sdp"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginStart="@dimen/_40sdp"
                     android:src="@drawable/ic_flashicon"
                     android:text="Flash ON" />
 
                 <ImageView
                     android:id="@+id/album"
-                    android:layout_alignParentRight="true"
                     android:layout_width="@dimen/_38sdp"
                     android:layout_height="@dimen/_38sdp"
+                    android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/_18sdp"
                     android:src="@drawable/ic_group_albumicon" />
-                </RelativeLayout>
+            </RelativeLayout>
 
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -147,15 +151,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/_35ssp"
                     android:fontFamily="@font/opensans_regular"
                     android:text="Album"
-                    android:layout_marginRight="@dimen/_35ssp"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp"
 
                     />
 
-                </RelativeLayout>
+            </RelativeLayout>
 
         </RelativeLayout>
 
@@ -182,8 +186,8 @@
             android:layout_height="match_parent"
             android:layout_below="@id/viewSideBarCV"
             android:fillViewport="true"
-            android:visibility="gone"
-            android:scrollbars="none">
+            android:scrollbars="none"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -206,9 +210,9 @@
                             android:id="@+id/cvProfile"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
+                            android:layout_centerHorizontal="true"
                             android:layout_marginTop="@dimen/_14sdp"
                             android:visibility="visible"
-                            android:layout_centerHorizontal="true"
                             app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_20sdp">
 
@@ -223,23 +227,15 @@
                                     android:layout_centerInParent="true"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:textColor="@color/primary_black"
-                                    android:textSize="@dimen/text_size_20sp"/>
+                                    android:textSize="@dimen/text_size_20sp" />
 
-                                <androidx.cardview.widget.CardView
-                                    android:id="@+id/cvProfilePic"
+
+                                <ImageView
+                                    android:id="@+id/imgProfile"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_centerInParent="true"
-                                    android:visibility="gone"
-                                    app:cardCornerRadius="@dimen/_20sdp">
-
-                                    <ImageView
-                                        android:id="@+id/imgProfile"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:scaleType="centerCrop"
-                                        android:visibility="visible"/>
-                                </androidx.cardview.widget.CardView>
+                                    android:scaleType="centerCrop"
+                                    android:visibility="visible" />
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
 
@@ -249,11 +245,11 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/cvProfile"
                             android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/_6sdp"
                             android:fontFamily="@font/opensans_semibold"
                             android:text=""
-                            android:layout_marginTop="@dimen/_6sdp"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_14ssp"/>
+                            android:textSize="@dimen/_14ssp" />
 
                         <RelativeLayout
                             android:id="@+id/qrViewRL"
@@ -272,57 +268,59 @@
                                 android:contentDescription="@string/qr_code"
                                 android:padding="@dimen/_3sdp" />
                         </RelativeLayout>
+
                         <LinearLayout
                             android:id="@+id/scanAmountLL"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/qrViewRL"
-                            android:gravity="center"
-                            android:visibility="gone"
                             android:layout_marginTop="@dimen/_9sdp"
-                            android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/scanMeRequestAmount"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="160.00"
-                            android:textSize="@dimen/_34sdp"
-                            android:textColor="@color/primary_black"
-                            android:fontFamily="@font/opensans_bold"
-                            />
+                            android:gravity="center"
+                            android:orientation="horizontal"
+                            android:visibility="gone">
+
+                            <TextView
+                                android:id="@+id/scanMeRequestAmount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_bold"
+                                android:text="160.00"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_34sdp" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="@dimen/_6sdp"
+                                android:layout_marginTop="@dimen/_6sdp"
+                                android:fontFamily="@font/opensans_bold"
                                 android:text="CYN"
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_6sdp"
-                                android:layout_marginStart="@dimen/_6sdp"
-                                android:layout_gravity="center_vertical"
-                                android:fontFamily="@font/opensans_bold"
-                                />
+                                android:textSize="@dimen/_11sdp" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_27sdp"
                             android:layout_below="@id/scanAmountLL"
+                            android:layout_marginTop="@dimen/_27sdp"
                             android:orientation="horizontal">
+
                             <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
+
                                 <TextView
                                     android:id="@+id/scanMesetAmountTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Set Amount"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:textSize="@dimen/_12ssp"
-                                    android:layout_marginStart="@dimen/_20sdp"
                                     android:layout_alignParentStart="true"
+                                    android:layout_marginStart="@dimen/_20sdp"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:text="Set Amount"
                                     android:textColor="@color/primary_green"
-                                    />
+                                    android:textSize="@dimen/_12ssp" />
 
                                 <TextView
                                     android:id="@+id/saveToAlbumTV"
@@ -363,7 +361,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="Recipient’s Address"
                             android:textColor="@color/xdark_gray"
-                            android:textSize="@dimen/_11ssp"/>
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
                             android:id="@+id/tvWalletAddress"
@@ -373,7 +371,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:text=""
                             android:textColor="#404040"
-                            android:textSize="@dimen/_10ssp"/>
+                            android:textSize="@dimen/_10ssp" />
 
                         <View
                             android:id="@+id/divider"
@@ -381,7 +379,7 @@
                             android:layout_height="1dp"
                             android:layout_below="@+id/tvWalletAddress"
                             android:layout_marginTop="@dimen/_20sdp"
-                            android:background="@color/at_gray"/>
+                            android:background="@color/at_gray" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
