--- a/app/src/main/res/layout/profileqrcode.xml
+++ b/app/src/main/res/layout/profileqrcode.xml
@@ -61,8 +61,8 @@
                         android:id="@+id/cvProfile"
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
-                        android:layout_marginTop="@dimen/_14sdp"
                         android:layout_centerHorizontal="true"
+                        android:layout_marginTop="@dimen/_14sdp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_30sdp">
 
@@ -78,25 +78,17 @@
                                 android:fontFamily="@font/opensans_semibold"
                                 android:text=""
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/text_size_20sp"></TextView>
+                                android:textSize="@dimen/text_size_20sp" />
 
-                            <androidx.cardview.widget.CardView
-                                android:id="@+id/cvProfilePic"
+                            <ImageView
+                                android:id="@+id/imgProfile"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_centerInParent="true"
-                                android:visibility="gone"
-                                app:cardCornerRadius="30dp">
-
-                                <ImageView
-                                    android:id="@+id/imgProfile"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:scaleType="centerCrop"
-                                    android:visibility="visible"></ImageView>
-                            </androidx.cardview.widget.CardView>
+                                android:scaleType="fitXY"
+                                android:visibility="visible" />
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
+
 
                     <TextView
                         android:id="@+id/tvName"
@@ -108,7 +100,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="Jonathan Joestar"
                         android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_14ssp"></TextView>
+                        android:textSize="@dimen/_14ssp" />
 
                     <RelativeLayout
                         android:layout_width="210dp"
@@ -122,10 +114,10 @@
                             android:id="@+id/idIVQrcode"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_margin="5dp"
                             android:layout_centerInParent="true"
-                            android:scaleType="fitCenter"
-                            android:contentDescription="@string/qr_code" />
+                            android:layout_margin="5dp"
+                            android:contentDescription="@string/qr_code"
+                            android:scaleType="fitCenter" />
                     </RelativeLayout>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -136,8 +128,8 @@
                 android:layout_below="@+id/cvQRcode"
                 android:layout_marginLeft="@dimen/_11sdp"
                 android:layout_marginRight="@dimen/_11sdp"
-                app:cardBackgroundColor="@color/white"
                 android:layout_marginBottom="@dimen/_2sdp"
+                app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="@dimen/_10sdp">
 
                 <RelativeLayout
