--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -103,67 +103,86 @@
             android:id="@+id/flashBtnLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_450sdp"
+            android:layout_marginTop="@dimen/_420sdp"
             android:visibility="visible">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <ImageView
-                    android:id="@+id/toglebtn"
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="@dimen/_38sdp"
-                    android:layout_height="@dimen/_38sdp"
-                    android:layout_marginStart="@dimen/_40sdp"
-                    android:src="@drawable/ic_flashicon"
-                    android:text="Flash ON" />
+            <RelativeLayout
+                android:id="@+id/iconLogosRL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/album"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="@dimen/_38sdp"
-                    android:layout_height="@dimen/_38sdp"
-                    android:layout_marginRight="@dimen/_18sdp"
-                    android:src="@drawable/ic_group_albumicon" />
-                </RelativeLayout>
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:layout_width="@dimen/_70sdp"
+                    android:layout_height="@dimen/_70sdp"
                     android:layout_alignParentStart="true"
-                    android:layout_marginStart="@dimen/_35sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="Flashlight"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"
+                    android:layout_marginStart="@dimen/_21sdp"
+                    android:orientation="vertical">
 
-                    />
+                    <ImageView
+                        android:id="@+id/toglebtn"
+                        android:layout_width="@dimen/_38sdp"
+                        android:layout_height="@dimen/_38sdp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_flashicon"
+                        android:text="Flash ON" />
 
-                <TextView
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Flashlight"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12ssp"
+
+                        />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="Album"
-                    android:layout_marginRight="@dimen/_35ssp"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"
+                    android:orientation="vertical">
 
-                    />
+                    <ImageView
+                        android:id="@+id/album"
+                        android:layout_width="@dimen/_38sdp"
+                        android:layout_height="@dimen/_38sdp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/_30sdp"
+                        android:src="@drawable/ic_group_albumicon" />
 
-                </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Album"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12ssp"
+
+                        />
+                </LinearLayout>
+            </RelativeLayout>
 
         </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/scannerLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_240sdp"
-            android:layout_centerInParent="true"
+            android:layout_height="720dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="61dp"
+            android:layout_marginBottom="130dp"
             android:orientation="horizontal"
             android:visibility="visible">
 
