--- a/app/src/main/res/layout/activity_pay_request_transaction.xml
+++ b/app/src/main/res/layout/activity_pay_request_transaction.xml
@@ -65,12 +65,14 @@
 
 
                 <ImageView
+                    android:id="@+id/profileIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/image"
                     android:visibility="visible" />
 
                 <TextView
+                    android:id="@+id/profileTitle"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/primary_green"
@@ -92,6 +94,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
@@ -100,6 +103,7 @@
                     android:textSize="@dimen/_12ssp" />
 
                 <TextView
+                    android:id="@+id/accAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
